src/test/dev-workspace/src-readable/java/net/labymod/core/laby3d/opengl/error/generated/ARBDrawBuffersBlend_StringErrorContext.java
package net.labymod.core.laby3d.opengl.error.generated;

import java.util.HashMap;
import java.util.Map;

/* JADX INFO: loaded from: LabyMod-4.jar:net/labymod/core/laby3d/opengl/error/generated/ARBDrawBuffersBlend_StringErrorContext.class */
public final class ARBDrawBuffersBlend_StringErrorContext {
    public static Map<String, String> buildMethods() {
        Map<String, String> methods = new HashMap<>();
        methods.put("glBlendEquationiARB(II)V", "net/labymod/core/laby3d/opengl/error/generated/ARBDrawBuffersBlendErrorContext");
        methods.put("glBlendEquationSeparateiARB(III)V", "net/labymod/core/laby3d/opengl/error/generated/ARBDrawBuffersBlendErrorContext");
        methods.put("glBlendFunciARB(III)V", "net/labymod/core/laby3d/opengl/error/generated/ARBDrawBuffersBlendErrorContext");
        methods.put("glBlendFuncSeparateiARB(IIIII)V", "net/labymod/core/laby3d/opengl/error/generated/ARBDrawBuffersBlendErrorContext");
        return methods;
    }
}
